--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -303,13 +303,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div></div></div>
+                    </div>
+                </div></div>
                 <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
             </div>
         </div>
         <div class="col-2">
             <div class="container-md">
-                <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Benutzername
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
