--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -277,8 +277,8 @@
                     Benutzername
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                    <a class="dropdown-item" href="#">Dropdown link</a>
-                    <a class="dropdown-item" href="#">Dropdown link</a>
+                    <a class="dropdown-item" href="#">Passwort änderm</a>
+                    <a class="dropdown-item" href="#">Dropdown li00+</a>
                 </div>
             </div>
         </div>
