--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -278,7 +278,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                     <a class="dropdown-item" href="#">Passwort änderm</a>
-                    <a class="dropdown-item" href="#">Dropdown li00+</a>
+                    <a class="dropdown-item" href="#">Dropdown 0+</a>
                 </div>
             </div>
         </div>
