--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
 
-    <title>Hello, world!</title>
+    <title>Personen Uebersicht</title>
 </head>
 <body>
+<!-- W3D on the top -->
 <div class="container">
     <div class="row sticky-top">
         <div class="col-12 text-center"  >
-            <a href="personen_uebersicht.html" class="text-dark"><h1>W3D</h1></a>
+            <a href="index.html" class="text-dark"><h1>W3D</h1></a>
         </div>
     </div>
-<!-- Nav tabs -->
-
+    <!-- Nav Bar -->
     <div class="row ">
         <div class="col-2">
             <div class="nav flex-column nav-pills">
@@ -29,6 +29,7 @@
                 <a class="nav-link text-dark" href="#">Stundenplan</a>
             </div>
         </div>
+        <!-- Card to add a person -->
         <div class="col-8">
             <div class="row">
                 <div class="col">
@@ -51,10 +52,20 @@
                         </div>
                     </div>
                 </div>
+                <!-- Search Field -->
                 <div class="col">
                     <input type="text" class="form-control" placeholder="Suche..." >
+                    <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Filtern
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                        <a class="dropdown-item" href="#">Filter 1</a>
+                        <a class="dropdown-item" href="#">Filter 2</a>
+                        <a class="dropdown-item" href="#">Filter 3</a>
+                    </div>
                 </div>
             </div>
+            <!-- List of all people -->
             <div class="row">
                     <div class="col-sm-6">
                         <div class="card mb-3" style="max-width: 540px;">
@@ -284,6 +295,7 @@
                 </div>
             </div>
             </div>
+        <!-- Username  in the top right -->
         <div class="col-2">
                 <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Benutzername
