--- a/index.html
+++ b/index.html
@@ -9,16 +9,44 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
 
-    <title>Hello, world!</title>
+    <title>Personen Uebersicht</title>
 </head>
 <body>
-<div class="mx-auto" style="width: 200px ">
-    <h1>W3D</h1>
-</div>
+<!-- W3D on the top -->
 <div class="container">
+    <div class="row sticky-top">
+        <div class="col-12 text-center"  >
+            <a href="index.html.html" class="text-dark"><h1>W3D</h1></a>
+        </div>
+    </div>
+    <!-- Nav Bar -->
+    <div class="row ">
+        <div class="col-2">
+            <div class="nav flex-column nav-pills">
+                <a class="nav-link text-dark" href="personen_uebersicht.html">Person</a>
+                <a class="nav-link text-dark" href="#">Gruppe</a>
+                <a class="nav-link text-dark" href="#">Ort</a>
+                <a class="nav-link text-dark" href="#">Stundenplan</a>
+            </div>
+        </div>
+        <div class="col-8">
 
+        </div>
+        <!-- Username  in the top right -->
+        <div class="col-2">
+            <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Benutzername
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <a class="dropdown-item" href="#">Abmelden</a>
+                <a class="dropdown-item" href="#">Passwort ändern</a>
+                <a class="dropdown-item" href="#">Benutzer anzeigen</a>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="container-xl">100% wide until extra large breakpoint</div>
+
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
