Adding the new Page into the Navigation Bar (Gruppen Übersicht)

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <div class="container">
     <div class="row sticky-top">
         <div class="col-12 text-center"  >
-            <a href="index.html.html" class="text-dark"><h1>W3D</h1></a>
+            <a href="index.html" class="text-dark"><h1>W3D</h1></a>
         </div>
     </div>
     <!-- Nav Bar -->
     <div class="row ">
         <div class="col-2">
             <div class="nav flex-column nav-pills">
-                <a class="nav-link text-dark" href="personen_uebersicht.html">Person</a>
-                <a class="nav-link text-dark" href="#">Gruppe</a>
+                <a class="nav-link text-dark" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
+                <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
                 <a class="nav-link text-dark" href="#">Ort</a>
                 <a class="nav-link text-dark" href="#">Stundenplan</a>
             </div>
