--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -24,7 +24,7 @@
         <div class="col-2">
             <div class="nav flex-column nav-pills">
                 <a class="nav-link active bg-dark" href="personen_uebersicht.html">Person</a>
-                <a class="nav-link text-dark" href="#">Gruppe</a>
+                <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
                 <a class="nav-link text-dark" href="#">Ort</a>
                 <a class="nav-link text-dark" href="#">Stundenplan</a>
             </div>
@@ -300,10 +300,11 @@
                 <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Benutzername
                 </button>
-                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                    <a class="dropdown-item" href="#">Passwort änderm</a>
-                    <a class="dropdown-item" href="#">Dropdown 0+</a>
-                </div>
+            div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <a class="dropdown-item" href="#">Abmelden</a>
+            <a class="dropdown-item" href="#">Passwort ändern</a>
+            <a class="dropdown-item" href="#">Benutzer anzeigen</a>
+        </div>
         </div>
     </div>
 </div>
