--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -23,14 +23,15 @@
     <div class="row ">
         <div class="col-2">
             <div class="nav flex-column nav-pills">
-                <a class="nav-link active bg-dark" href="personen_uebersicht.html">Person</a>
+                <a class="nav-link text-dark" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
                 <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
-                <a class="nav-link text-dark" href="#">Ort</a>
-                <a class="nav-link text-dark" href="#">Stundenplan</a>
+                <a class="nav-link text-dark" href="orte_uebersicht.html">Ort</a>
+                <a class="nav-link text-dark" href="stundenplan_uebersicht.html">Stundenplan</a>
             </div>
         </div>
-        <!-- Card to add a person -->
+
         <div class="col-8">
+            <!-- Card to add a person -->
             <div class="row">
                 <div class="col">
                     <div class="card mb-3" style="max-width: 540px;">
@@ -300,10 +301,11 @@
                 <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Benutzername
                 </button>
-            div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <a class="dropdown-item" href="#">Abmelden</a>
-            <a class="dropdown-item" href="#">Passwort ändern</a>
-            <a class="dropdown-item" href="#">Benutzer anzeigen</a>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <a class="dropdown-item" href="login.html">Abmelden</a>
+                <a class="dropdown-item" href="passwort_aendern.html">Passwort ändern</a>
+                <a class="dropdown-item" href="benutzer_anzeigen.html">Benutzer anzeigen</a>
+            </div>
         </div>
         </div>
     </div>
