--- a/personen_uebersicht.html
+++ b/personen_uebersicht.html
@@ -23,7 +23,7 @@
     <div class="row ">
         <div class="col-2">
             <div class="nav flex-column nav-pills">
-                <a class="nav-link text-dark" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
+                <a class="nav-link active bg-dark" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
                 <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
                 <a class="nav-link text-dark" href="orte_uebersicht.html">Ort</a>
                 <a class="nav-link text-dark" href="stundenplan_uebersicht.html">Stundenplan</a>
@@ -31,8 +31,9 @@
         </div>
 
         <div class="col-8">
-            <!-- Card to add a person -->
+            <!-- Adding people and searching for them -->
             <div class="row">
+                <!-- Card to add a person -->
                 <div class="col">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
@@ -50,10 +51,11 @@
                                     <a href="#" class="stretched-link"></a>
                                 </div>
                             </div>
+                            <a href="person_hinzufuegen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
-                <!-- Search Field -->
+                <!-- Search Field and Filter-->
                 <div class="col">
                     <input type="text" class="form-control" placeholder="Suche..." >
                     <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -80,9 +82,10 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Vorname</h5>
                                         <h5 class="card-title">Nachname</h5>
-                                        <a href="#" class="stretched-link"></a>
+
                                     </div>
                                 </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
@@ -98,203 +101,15 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Vorname</h5>
                                         <h5 class="card-title">Nachname</h5>
-                                        <a href="#" class="stretched-link"></a>
+
                                     </div>
                                 </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                                </svg>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Vorname</h5>
-                                    <h5 class="card-title">Nachname</h5>
-                                    <a href="#" class="stretched-link"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             </div>
         <!-- Username  in the top right -->
         <div class="col-2">
