Finishing page which shows a list of all the groups (Gruppen Übersicht)

--- a/gruppen_uebersicht.html
+++ b/gruppen_uebersicht.html
@@ -24,13 +24,16 @@
         <div class="col-2">
             <div class="nav flex-column nav-pills">
                 <a class="nav-link text-dark" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
-                <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
+                <a class="nav-link active bg-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
                 <a class="nav-link text-dark" href="orte_uebersicht.html">Ort</a>
                 <a class="nav-link text-dark" href="stundenplan_uebersicht.html">Stundenplan</a>
             </div>
         </div>
+        <!-- Content -->
         <div class="col-8">
+            <!-- Adding groups and searching for them -->
             <div class="row">
+                <!-- Adding groups -->
                 <div class="col">
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
@@ -45,13 +48,14 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Gruppe</h5>
                                     <h5 class="card-title">hinzufügen</h5>
-                                    <a href="#" class="stretched-link"></a>
+
                                 </div>
                             </div>
+                            <a href="gruppe_hinzufuegen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
-                <!-- Search Field -->
+                <!-- Search Field and Filter-->
                 <div class="col">
                     <input type="text" class="form-control" placeholder="Suche..." >
                     <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -64,6 +68,7 @@
                     </div>
                 </div>
             </div>
+            <!-- List of all groups -->
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card mb-3" style="max-width: 540px;">
@@ -77,9 +82,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Gruppen</h5>
                                     <h5 class="card-title">Bezeichnung</h5>
-                                    <a href="#" class="stretched-link"></a>
+
                                 </div>
                             </div>
+                            <a href="gruppe_anzeigen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -95,9 +101,9 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Gruppen </h5>
                                     <h5 class="card-title">Bezeichnung</h5>
-                                    <a href="#" class="stretched-link"></a>
                                 </div>
                             </div>
+                            <a href="gruppe_anzeigen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
