--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,6 +11,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="Style.css">
 
     <title>Uebersicht</title>
