--- a/person_hinzufuegen.html
+++ b/person_hinzufuegen.html
@@ -21,6 +21,8 @@
     <!-- Für die Select-Box-->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <!-- Bootstrap Styling für die Select-Box-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css" rel="stylesheet">
 
     <title>Uebersicht</title>
 </head>
@@ -61,13 +63,15 @@
                         </div>
                         <div class="form-row">
                             <label for="groups">Gruppen</label>
-                            <select id="groups" name="groups[]" class="select2-multi form-control" multiple="multiple">
+                            <select id="groups" name="groups[]" class="form-control select2-multi" multiple="multiple">
                                 <option value="$gruppe1">Gruppe 1</option>
                                 <option value="$grp2">Gruppe 2</option>
+                                <option value="$grp3">1AHIT</option>
+                                <option value="$grp4">1AHBG</option>
                             </select>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col overflow-auto" style="max-height: 300px">
                         <div class="form-row">
                             <div class="col">
                                 <label class="invisible">LAYOUT</label><!-- Damit der Input auf der selben Höhe ist -->
@@ -80,6 +84,30 @@
                         <div class="form-row mt-1 overflow-auto">
                             <div class="col pt-2 pl-3 ml-2">
                                 <ul class="list-group">
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 1</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 2</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 2</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 1</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 2</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <p class="p-0 m-0 flex-grow-1">Muster 2</p>
+                                        <a class="btn btn-sm btn-danger">löschen</a>
+                                    </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
                                         <p class="p-0 m-0 flex-grow-1">Muster 1</p>
                                         <a class="btn btn-sm btn-danger">löschen</a>
@@ -117,7 +145,11 @@
 </div>
 <script>$(document).ready(function () {
     bsCustomFileInput.init();
-    $('.select2-multi').select2();
+    //Can also use AJAX
+    $('.select2-multi').select2({
+        placeholder: "keine Gruppe ausgewählt",
+        theme: "bootstrap"
+    });
 })</script>
 </body>
 </html>
