Finnish person_anzeigen.html

--- a/person_anzeigen.html
+++ b/person_anzeigen.html
@@ -55,7 +55,7 @@
                         </li>
                         <li class="list-group-item">
                             <h5 class="mb-0 text-muted">Sozialversicherungsnummer</h5>
-                            <p class="anz-text">1234-010203<p>
+                            <p class="anz-text">010203-1234<p>
                         </li>
                         <li class="list-group-item">
                             <h5 class="mb-0 text-muted">Aktuelle Anwesenheit</h5>
@@ -65,20 +65,20 @@
                 </div>
                 <div class="col">
                     <div class="row">
-                        <div class="col">
-                            <a class="btn btn-warning" href="#">Bearbeiten</a>
+                        <div class="col p-1">
+                            <a class="btn btn-warning h-100 w-100" href="#">Bearbeiten</a>
                         </div>
-                        <div class="col">
-                            <a class="btn btn-danger" href="#">Löschen</a>
+                        <div class="col p-1">
+                            <a class="btn btn-danger h-100 w-100" href="#">Löschen</a>
                         </div>
-                        <div class="col">
-                            <a class="btn btn-info" href="#">Stundenplan</a>
+                        <div class="col p-1">
+                            <a class="btn btn-info h-100 w-100" href="#">Stundenplan</a>
                         </div>
-                        <div class="col">
-                            <a class="btn btn-primary" href="#">Statistiken</a>
+                        <div class="col p-1">
+                            <a class="btn btn-primary h-100 w-100" href="#">Statistiken</a>
                         </div>
-                        <div class="col">
-                            <a class="btn btn-secondary" href="#">Anwesenheit ändern</a>
+                        <div class="col p-1">
+                            <a class="btn btn-secondary h-100 w-100" href="#">Anwesenheit ändern</a>
                         </div>
                     </div>
                 </div>
