--- a/ort_hinzufuegen.html
+++ b/ort_hinzufuegen.html
@@ -1,10 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- JS-Libs -->
+    <script src="js/jquery-3.5.0.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
+
+    <!-- TODO Lizenz? -->
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="Style.css">
+
+    <!-- Für die Select-Box-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <!-- Bootstrap Styling für die Select-Box-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css" rel="stylesheet">
+
+    <title>Ort hinzufügen</title>
 </head>
 <body>
+<!-- W3D on the top -->
+<div class="container">
+    <div class="row sticky-top">
+        <div class="col-12 text-center">
+            <a href="index.html" class="text-dark"><h1>W3D</h1></a>
+        </div>
+    </div>
+    <!-- Nav Bar -->
+    <div class="row ">
+        <div class="col-2">
+            <div class="nav flex-column nav-pills">
+                <a class="nav-link text-dark active" href="personen_uebersicht.html">Person</a>
+                <a class="nav-link text-dark" href="gruppen_uebersicht.html">Gruppe</a>
+                <a class="nav-link text-dark" href="orte_uebersicht.html">Ort</a>
+                <a class="nav-link text-dark" href="stundenplan_uebersicht.html">Stundenplan</a>
+                <a class="nav-link text-dark bg-light mt-4" href="#">Zurück</a>
+            </div>
+        </div>
+        <!-- Content -->
+        <div class="col-8">
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <div class="form-row">
+                            <label for="vorname">Ortsbezeichnung</label>
+                            <input type="text" id="ortsbezeichnung" name="ortsbezeichnung" class="form-control">
+                        </div>
+                        <div class="form-row">
+                            <label for="kurzbeschreibung">Kurzbeschreibung</label>
+                            <input type="text" id="kurzbeschreibung" name="kurzbeschreibung" class="form-control">
+                        </div>
+                    </div>
+                </div>
+                <div class="row  justify-content-end pt-4">
+                    <a class="btn btn-success text-white">Ort speichern</a>
+                </div>
+            </form>
+        </div>
+        <!-- Username  in the top right -->
+        <div class="col-2">
+            <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Benutzername
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <a class="dropdown-item" href="login.html">Abmelden</a>
+                <a class="dropdown-item" href="passwort_aendern.html">Passwort ändern</a>
+                <a class="dropdown-item" href="benutzer_anzeigen.html">Benutzer anzeigen</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
