Changing the link of the card

--- a/orte_uebersicht.html
+++ b/orte_uebersicht.html
@@ -84,7 +84,7 @@
 
                                 </div>
                             </div>
-                            <a href="ort_anzeigen.html_anzeigen.html" class="stretched-link"></a>
+                            <a href="ort_anzeigen.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
