--- a/gruppe_hinzufuegen.html
+++ b/gruppe_hinzufuegen.html
@@ -73,7 +73,7 @@
                             </select>
                         </div>
                         <div class="form-row">
-                            <label for="stpl">Verantwortlicher</label>
+                            <label for="stpl">Stundenplan</label>
                             <select id="stpl" name="stpl" class="form-control select2">
                                 <option></option>
                                 <option value="$pers1">Stpl1</option>
